--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.3",
-        "illuminate/contracts": "^10.0||^11.0||^12.0",
+        "illuminate/contracts": "^11.0||^12.0",
         "laravel/folio": "^1.1",
         "mcamara/laravel-localization": "^2.3",
         "spatie/laravel-package-tools": "^1.16"
